--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width= , initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
+     <link rel="stylesheet" href="app.css">
      <title>Estudio Fotografico Fotocol2000</title>
  </head>
  <body>
-     <h1>Bienvenido a la web del Estudio  Fotográfico Fotocol</h1>
-     <p>Está es la página donde podrás ver nuestros trabajos</p>
+     <div class="contenedor">
+        <h1>Bienvenido a la web del Estudio  Fotográfico Fotocol</h1>
+        <p>Está es la página donde podrás ver nuestros trabajos</p>
+     </div>
  </body>
  </html>
