Agregamos menu, modificamos estilos y se agregó un slide de Node.js

--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
      <title>Estudio Fotografico Fotocol2000</title>
  </head>
  <body>
+     <header>
+         <ul class="menu">
+             <li>Inicio</li>
+             <li>Gobierno</li>
+             <li>Nosotros</li>
+             <li>Contacto</li>
+             <li>Ayuda</li>
+         </ul>
+     </header>
      <div class="contenedor">
-        <h1>Bienvenido a la web del Estudio  Fotográfico Fotocol</h1>
-        <p>Está es la página donde podrás ver nuestros trabajos</p>
+        <img src="./img/middlewares-en-nodejs-t1.jpg" alt="Node">
      </div>
  </body>
  </html>
