Modificamos el slide para tener mejor adaptación de pantalla

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          </ul>
      </header>
      <div class="contenedor">
-        <img src="./img/middlewares-en-nodejs-t1.jpg" alt="Node">
+        <img src="./img/Nodejs-banner-1.jpg" alt="Node">
      </div>
  </body>
  </html>
