Se agrego una nueva seccion

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width= , initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="app.css">
-     <title>Estudio Fotografico Fotocol2000</title>
+     <title>Blog General de NodeJS</title>
  </head>
  <body>
      <header>
@@ -20,5 +20,26 @@
      <div class="contenedor">
         <img src="./img/Nodejs-banner-1.jpg" alt="Node">
      </div>
+     <main class="principal">
+         <div class="productos">
+             <li>
+                 <img src="img/01.jpg" alt="Primero">
+                 <h3>Primer Pokemon</h3>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+            </li>
+
+             <li>
+                 <img src="img/02.jpg" alt="Segundo">
+                 <h3>Segundo Pokemon</h3>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+            </li>
+
+             <li>
+                 <img src="img/03.jpg" alt="Tercero">
+                 <h3>Tercer Pokemon</h3>
+                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+            </li>
+         </div>
+     </main>
  </body>
  </html>
