--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
          <div class="productos">
              <li>
                  <img src="img/01.jpg" alt="Primero">
-                 <h3>Primer Pokemon</h3>
+                 <h3>Pokemon 01</h3>
                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
             </li>
 
              <li>
                  <img src="img/02.jpg" alt="Segundo">
-                 <h3>Segundo Pokemon</h3>
+                 <h3>Pokemon 02</h3>
                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
             </li>
 
              <li>
                  <img src="img/03.jpg" alt="Tercero">
-                 <h3>Tercer Pokemon</h3>
+                 <h3>Pokemon 03</h3>
                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
             </li>
          </div>
