--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width= , initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <link rel="stylesheet" href="app.css">
-     <title>Blog General de NodeJS</title>
+     <title>Blog General de NodeJS Trabajando con pokemones</title>
  </head>
  <body>
      <header>
