Se agregaron mas cards y se trabaja con un media querie

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
              <li>Inicio</li>
              <li>Gobierno</li>
              <li>Nosotros</li>
+             <li>Acerca de</li>
              <li>Ayuda</li>
          </ul>
      </header>
@@ -38,6 +39,24 @@
                  <h3>Pokemon 03</h3>
                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
             </li>
+
+            <li>
+                <img src="img/01.jpg" alt="Primero">
+                <h3>Pokemon 01</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+           </li>
+
+            <li>
+                <img src="img/02.jpg" alt="Segundo">
+                <h3>Pokemon 02</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+           </li>
+
+            <li>
+                <img src="img/03.jpg" alt="Tercero">
+                <h3>Pokemon 03</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi obcaecati soluta, ab labore porro quia vitae nobis voluptatem dolorum et est hic, asperiores temporibus numquam! Esse quod repellendus magnam corporis.</p>
+           </li>
          </div>
      </main>
  </body>
